# haiven

./: .aiignore  .cursorignore  .cursorrules  .deepeval_telemetry.txt  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  app.spec  get_latest_team_ai_base.sh  how-to-use.md  install_dev_dependencies.sh  justfile  pyproject.toml  run_image_local.sh  upgrade_dev_dependencies.sh
app/: .deepeval_telemetry.txt  .dockerignore  .env.anthropic.template  .env.aws.template  .env.azure.template  .env.gcp.template  .env.ollama.template  .env.openai.template  .env.template  Dockerfile  api_key_manager.py  app.py  bedrock.py  config.yaml  config_service.py  content_manager.py  deepeval_handler.py  dev.py  disclaimer_and_guidelines.py  knowledge_manager.py  logger.py  main.py  main.spec  pyproject.toml  pytest.ini  requirements.txt  server.py  test_firestore_config.yaml  test_firestore_integration.py  test_json_serialization.py  update_dependencies.py  user_feedback.py  welcome_message.py
app/api/: api_basics.py  api_company_research.py  api_creative_matrix.py  api_features.py  api_key_management.py  api_multi_step.py  api_requirements.py  api_rules.py  api_scenarios.py  api_story_validation.py  api_threat_modelling.py  api_utils.py  boba_api.py
app/api/models/: explore_request.py
app/app/config/: api_keys.json
app/auth/: api_key_auth.py  api_key_auth_service.py  api_key_repository.py  api_key_repository_factory.py  auth_util.py  file_api_key_repository.py  firestore_api_key_repository.py
app/config/: constants.py
app/embeddings/: client.py  documents.py  documents_utils.py  embeddings.py  embeddings_service.py  in_memory.py  in_memory_embeddings_db_service.py  service.py
app/knowledge/: documents.py  knowledge.py  knowledge_pack.py  markdown.py  pack.py
app/knowledge_scripts/: README.md  create_faiss_from_pdf.ipynb
app/knowledge_scripts/.ipynb_checkpoints/: create_faiss_from_pdf-checkpoint.ipynb
app/knowledge_scripts/mfcom/: README.md  all_articles.csv  extract.py  index.py
app/llms/: aws_chat.py  chat_events.py  chats.py  clients.py  default_models.py  image_description_service.py  litellm_wrapper.py  llm_config.py  model.py  model_config.py  models_service.py
app/prompts/: inspirations.py  prompts.py  prompts_factory.py  prompts_testing_ui.py
app/resources/: inspirations.json  inspirations.yaml
app/resources/html_templates/: auth_error.html  index.html
app/resources/prompts_guided/: company_research.md  creative_matrix.md  given_when_then.md  guided-ai-tool-research.md  invest_critique.md  prompt_flows.yaml  requirements.md  scenarios.md  scenarios_detailed.md  story_validation.md  story_validation_summary.md  threat_modelling.md
app/resources/static/: main.css
app/resources/styles/: haiven.css  teamai.css
app/shared/: app.py  aws_chat.py  boba_api.py  chats.py  config_service.py  content_manager.py  data_sources.py  document_retriever.py  documents_utils.py  embeddings.py  event_handler.py  knowledge.py  llm_config.py  logger.py  markdown.py  navigation.py  prompts.py  prompts_factory.py  server.py  ui.py  ui_factory.py  ui_header_template.py  url.py  user_context.py  user_feedback.py
app/tab_about/: ui.py
app/tab_agent_chat/: README.md  ui.py
app/tab_brainstorming/: ui.py
app/tab_db_exploration/: README.md  ui.py
app/tab_diagram_chat/: prompts.py  ui.py
app/tab_knowledge_chat/: prompts.py  ui.py
app/tab_plain_chat/: ui.py
app/tab_prompt_chat/: ui.py
app/tab_requirements/: api.py
app/tab_story_validation/: api.py
app/tab_threat_modelling/: api.py
app/tests/: conftest.py  export_sample_to_csv.py  test_agents_service.py  test_api.py  test_api_key_auth.py  test_api_key_auth_service.py  test_api_key_repository.py  test_api_rules.py  test_app.py  test_auth_util.py  test_chat_client_factory.py  test_chats.py  test_config_service.py  test_content_manager.py  test_deepeval_handler.py  test_embeddings.py  test_embeddings_service.py  test_event_handler.py  test_feature_toggle.py  test_firestore_api_key_repository.py  test_haiven_rag.py  test_image_description_service.py  test_inspirations.py  test_integration.py  test_knowledge_documents.py  test_knowledge_manager.py  test_knowledge_pack.py  test_llm_chat_factory.py  test_main.py  test_markdown.py  test_mcp_api_key_integration.py  test_models_service.py  test_navigation.py  test_prompts.py  test_prompts_factory.py  test_ragas.py  test_server.py  test_shared_ui.py  test_token_usage.py  test_token_usage_integration.py  (+6 more)
app/ui/: event_handler.py  navigation.py  ui.py  ui_factory.py  url.py  user_context.py
cli/: README.md  main.py  pyproject.toml  requirements.txt  update_dependencies.py
cli/app/: app.py
cli/evals/: dataset.csv  test_data.py
cli/haiven_cli/: main.py
cli/models/: embedding_model.py  html_filter.py
cli/services/: client.py  config_service.py  embedding_service.py  file_service.py  knowledge_service.py  page_helper.py
cli/teamai_cli/: README.md  main.py
cli/tests/: test_app.py  test_cli_config_service.py  test_client.py  test_config_service.py  test_embedding_service.py  test_file_service.py  test_knowledge_service.py  test_main.py  test_metadata_service.py  test_page_helper.py  test_token_service.py  test_web_page_service.py
mcp-server/: .gitignore  AUTHENTICATION.md  DEVELOPER_GUIDE.md  Dockerfile  INSTALL.bat  README.md  TROUBLESHOOTING.md  USER_SETUP_GUIDE.md  claude-desktop-config-with-cwd.json  claude-desktop-config.json  dev_setup.py  dev_setup.sh  easy_install.py  generate_config.py  install.sh  mcp_server.py  pyproject.toml  start_server.sh  test_integration.py  test_mcp_connection.py  test_mcp_server.py  test_setup.py  test_windsurf_mcp.py  windsurf_config.json
mcp-server/config_examples/: environment.env.example  windsurf_config_template.json
mcp-server/examples/: api-key-config.json  claude-desktop-config.json  cursor-config.json  development-config.json  production-config.json
mcp_server/: Dockerfile  README.md  mcp_server.py  pyproject.toml
(+313 files in other folders)
