[tool.poetry]
name = "devscripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "devscripts" },
]

[tool.poetry.scripts]
init = "devscripts.main:app_init"
build = "devscripts.main:app_build"
test = "devscripts.main:app_test"
app = "devscripts.main:app_run"
coverage = "devscripts.main:app_coverage"
build-docker-base = "devscripts.main:build_docker_base_image"
cli-init = "devscripts.main:cli_init"
cli-test = "devscripts.main:cli_test"
cli = "devscripts.main:cli_run"
cli-coverage = "devscripts.main:cli_coverage"
cli-build = "devscripts.main:cli_build"
cli-update-docs = "devscripts.main:cli_update_docs"
