[tool.poetry]
name = "haiven"
version = "0.1.0"
description = ""
authors = ["Thoughtworks <haiven@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
Authlib = "^1.6.5"
boto3 = "^1.42.3"
faiss-cpu = "^1.13.1"
fastapi = "^0.124.0"
google-cloud-aiplatform = "^1.129.0"
google-cloud-firestore = "^2.21.0"
itsdangerous = "^2.2.0"
Jinja2 = "^3.1.6"
langchain = "^1.1.2"
langchain-openai = "^1.1.0"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.0.0"
loguru = "^0.7.3"
ollama = "^0.6.1"
openai = "^2.9.0"
pyarrow = "^22.0.0"
pypdf = "^6.4.0"
python-frontmatter = "^1.1.0"
shapely = "^2.1.2"
tiktoken = "^0.12.0"
typing-extensions = "^4.15.0"
typing-inspect = "^0.9.0"
uvicorn = "^0.38.0"
python-dotenv = "^1.2.1"
toml = "^0.10.2"
pillow = "^12.0.0"
python-multipart = "^0.0.20"
litellm = "^1.80.7"
tenacity = "^9.1.2"
starlette = "^0.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"
ragas = "^0.4.0"
langchain-aws = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]