[tool.poetry]
name = "haiven"
version = "0.1.0"
description = ""
authors = ["Thoughtworks <haiven@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
Authlib = "^1.6.8"
boto3 = "^1.42.54"
faiss-cpu = "^1.13.2"
fastapi = "^0.131.0"
google-cloud-aiplatform = "^1.138.0"
google-cloud-firestore = "^2.23.0"
itsdangerous = "^2.2.0"
Jinja2 = "^3.1.6"
langchain = "^1.2.10"
langchain-openai = "^1.1.10"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.1.1"
loguru = "^0.7.3"
ollama = "^0.6.1"
openai = "^2.21.0"
pyarrow = "^23.0.1"
pypdf = "^6.7.2"
python-frontmatter = "^1.1.0"
shapely = "^2.1.2"
tiktoken = "^0.12.0"
typing-extensions = "^4.15.0"
typing-inspect = "^0.9.0"
uvicorn = "^0.41.0"
python-dotenv = "^1.2.1"
toml = "^0.10.2"
pillow = "^12.1.1"
python-multipart = "^0.0.22"
litellm = "^1.81.14"
tenacity = "^9.1.4"
starlette = "^0.52.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"
ragas = "^0.4.3"
langchain-aws = "^1.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]