[tool.poetry]
name = "haiven"
version = "0.1.0"
description = ""
authors = ["Thoughtworks <haiven@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
Authlib = "^1.7.2"
boto3 = "^1.43.48"
faiss-cpu = "^1.14.3"
fastapi = "^0.139.0"
google-cloud-aiplatform = "^1.161.0"
google-cloud-firestore = "^2.28.0"
itsdangerous = "^2.2.0"
Jinja2 = "^3.1.6"
langchain = "^1.3.13"
langchain-openai = "^1.3.5"
langchain-community = "^0.4.2"
langchain-text-splitters = "^1.1.2"
loguru = "^0.7.3"
ollama = "^0.6.2"
openai = "^2.45.0"
pyarrow = "^25.0.0"
pypdf = "^6.14.2"
python-frontmatter = "^1.3.0"
shapely = "^2.1.2"
tiktoken = "^0.13.0"
typing-extensions = "^4.16.0"
typing-inspect = "^0.9.0"
uvicorn = "^0.51.0"
python-dotenv = "^1.2.2"
toml = "^0.10.2"
pillow = "^12.3.0"
python-multipart = "^0.0.32"
litellm = "^1.92.0"
tenacity = "^9.1.4"
starlette = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-mock = "^3.15.1"
pytest-cov = "^7.1.0"
ragas = "^0.4.3"
langchain-aws = "^1.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]