[tool.poetry]
name = "haiven-cli"
version = "0.3.0"
description = ""
authors = ["Thoughtworks <haiven@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.scripts]
haiven-cli = "haiven_cli.main:cli"

[tool.poetry.dependencies]
python = "~3.12"
beautifulsoup4 = "^4.14.3"
faiss-cpu = "^1.13.1"
langchain = "^1.1.3"
langchain-openai = "^1.1.2"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.0.0"
boto3 = "^1.42.8"
pypdf = "^6.4.2"
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
python-dotenv = "^1.2.1"
tiktoken = "^0.12.0"
typer = "^0.12.5"
typer-cli = "^0.12.5"
typer-slim = "^0.20.0"
typing-extensions = "^4.15.0"
typing-inspect = "^0.9.0"
pytest-cov = "^7.0.0"
toml = "^0.10.2"
pydantic = "^2.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]
