[tool.poetry]
name = "haiven-cli"
version = "0.3.0"
description = ""
authors = ["Thoughtworks <haiven@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.scripts]
haiven-cli = "haiven_cli.main:cli"

[tool.poetry.dependencies]
python = "~3.12"
beautifulsoup4 = "^4.15.0"
faiss-cpu = "^1.14.3"
langchain = "^1.3.13"
langchain-openai = "^1.3.5"
langchain-community = "^0.4.2"
langchain-text-splitters = "^1.1.2"
boto3 = "^1.43.48"
pypdf = "^6.14.2"
pytest = "^9.1.1"
pytest-mock = "^3.15.1"
python-dotenv = "^1.2.2"
tiktoken = "^0.13.0"
typer = "^0.12.5"
typer-cli = "^0.12.5"
typer-slim = "^0.21.1"
typing-extensions = "^4.16.0"
typing-inspect = "^0.9.0"
pytest-cov = "^7.1.0"
toml = "^0.10.2"
pydantic = "^2.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]
